--- a/package.json
+++ b/package.json
@@ -14,16 +14,21 @@
     "@heroicons/react": "^2.0.18",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "autoprefixer": "10.4.16",
+    "axios": "^1.5.1",
     "date-fns": "^2.30.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
+    "mapbox-gl": "^2.15.0",
     "mongodb": "^6.1.0",
     "next": "13.5.2",
     "next-auth": "^4.23.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-geolocated": "^4.1.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-map-gl": "^7.1.6",
     "tailwindcss": "3.3.3"
   }
 }
