--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.0.18",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "autoprefixer": "10.4.16",
+    "axios": "^1.5.1",
     "date-fns": "^2.30.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
