--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-map-gl": "^7.1.6",
     "tailwindcss": "3.3.3"
   }
