--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "mongodb": "^6.1.0",
     "next": "13.5.2",
     "next-auth": "^4.23.2",
+    "next-pwa": "^5.6.0",
     "postcss": "8.4.30",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-geolocated": "^4.1.2",
     "react-hook-form": "^7.47.0",
